# KNNFileOrganizer

./: LICENSE  README.md  check_distances.py  labels.json  main.py  org_file.py  requirements.txt  training_labels.json
.github/workflows/: ci.yml
knn_file_organiser/: pyproject.toml  training_labels.json
knn_file_organiser/src/knn_file_organiser/: cli.py
knn_file_organiser/tests/: test_io_utils.py
src/knn_file_organiser/: __init__.py  config.py  io_utils.py  model_utils.py  organiser.py
tests/: test_model_utils.py  test_organiser.py
